2008-11-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm (runCollector):
	Number of SNMP sessions per snmp_dispatcher is limited to 100
	because of some strange bugs (found on SPARC/Solaris platform)

2008-10-28  Jon Nistor <nistor@snickers.org>

        * perllib/Torrus/DevDiscover/Liebert.pm:
        New discovery module for Liebert HVAC systems

2008-10-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/srvderive.in: new utility that combines several services
	and combines them as MAX or SUM (sponsored by Nexellent.ch)

2008-09-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Added safe signal handlers to all components. Also Apache handlers
	close the BDB environment at the end of each execution.
	BDB should now be much more stable.

2008-09-16  Jon Nistor <nistor@snickers.org>

	* perllib/Torrus/DevDiscover/Arbor_E.pm:
	New discovery module for Arbor E series devices

2008-09-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector.pm: Now the collector cache is filled by
	the compiler. This optimizes the collector startup. Need to re-compile
	after upgrade.

2008-09-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/configsnapshot.in: Bugfix in root subtree parameters
	* bin/configsnapshot.in: added parameter filtering option

2008-09-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: Filtered out EOBC and FIFO
	virtual interfaces

	* xmlconfig/vendor/cisco.ios.mac-accounting.xml:
	Bugfix in the RRD filename

2008-08-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_opts):
	View parameters can be overridden with URL
	variables "Gstart", "Gend" and so on.

2008-08-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 1.0.7

2008-08-04  Jon Nistor <nistor@snickers.org>
